# manualmira

./: .clang-tidy  CMakeLists.txt
cmake/: Findibverbs.cmake  Findrdmacm.cmake
manualmira/: CMakeLists.txt
manualmira/include/manualmira/: cache.h  rdma.h
manualmira/src/: rdma.cpp
